<resources>
    <string name="app_name">InmoMarket</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_sign_in_google">Sign in with Google</string>
    <string name="default_web_client_id">651308898588-nnjsmahilh4tp3b36nlc7rqbcpkf4pfo.apps.googleusercontent.com</string>
    <string name="action_register_in_google">Register with Google</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="dont_have_account">Don\'t have an account yet?</string>
    <string name="title_search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_profile">Profile</string>
    <string name="title_messages">Messages</string>
    <string name="title_add">Add</string>
    <string name="pront_title">Tittle</string>
    <string name="pront_description">Description</string>
    <string name="load_images">Load images</string>
    <string name="prompt_address">Address</string>
    <string name="save">Save</string>
    <string name="image">Image</string>
    <string name="delete">Delete</string>
    <string name="prompt_Baths">Bathrooms</string>
    <string name="prompt_rooms">Rooms</string>
    <string name="parcela_image">Parcela Image</string>
    <string name="favorite">Favorite</string>
    <string name="parcela_name">Name</string>
    <string name="tittle_is_required">Tittle is required</string>
    <string name="tittle_must_be_at_least_5_characters">Tittle must be at least 5 characters</string>
    <string name="description_is_required">Description is required</string>
    <string name="description_least_100">Description must be at least 100 characters</string>
    <string name="description_most_300">Description can\'t be more than 300 characters</string>
    <string name="location_is_required">Location is required</string>
    <string name="baths_is_required">Baths is required</string>
    <string name="rooms_is_required">Rooms is required</string>
    <string name="images_3">At least 3 images are required</string>
    <string name="extra_image">Imagen Extra</string>
    <string name="extra_cuanty">Extra Cuantity</string>
    <string name="prompt_square_meters">Meters²</string>
    <string name="prompt_price">Price</string>
    <string name="prompt_floors">Floors</string>
    <string name="username">Username</string>
    <string name="message">Message</string>
    <string name="time">16:55</string>
    <string name="chat">Start a Chat</string>
    <string name="prompt_message">Message</string>
    <string name="send_message">Send message</string>
    <string name="lorem_ipsum">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen.</string>
    <string name="login">Login</string>
    <string name="label_name">Name</string>
    <string name="reset_password">Reset password</string>
    <string name="google_maps_key">AIzaSyCqFDsTiczZy6sYp1Tkr0Jp1pXOaUc4Nls</string>
    <string name="sign_out">Sign Out</string>
    <string name="close_account">Close Account</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="share">Share</string>
    <string name="biometric_login_settings">Login with biometrical data</string>
    <string name="go_back">Go Back</string>
    <string name="ubication_settings">Allow ubication</string>
    <string name="change_password">Change password</string>
    <string name="tab_uploads">Uploads</string>
    <string name="tab_favorites">Favorites</string>
    <string name="favorites_empty">No Favorites Found</string>
    <string name="no_conversations">No conversations found</string>
    <string name="no_home_items">No item found</string>
    <string name="self_empty">No self properties found</string>
    <string name="profile_user">Profile User</string>
    <string name="edit_profile_image">Edit profile Image</string>
    <string name="bimetric_pop_up_dialog">Biometric login is available! Do you want to enable it?</string>
    <string name="bring_me_there">Bring me there!</string>
    <string name="cancel">Cancel</string>
    <string name="date" translatable="false">Monday 25 of 4</string>
    <string name="filter_button">Filter Button</string>
    <string name="filters">Filters</string>
    <string name="prompt_min_price">Minimun Price</string>
    <string name="prompt_from">From</string>
    <string name="prompt_to">To</string>
    <string name="action_sign_in_github">Sign in with Github</string>
    <string name="clear_filters">Clear filters</string>
    <string name="no_user_loged">No user is currently logged in. Please log in first.</string>
    <string name="login_use_biometric">Log in using your biometric credential</string>
    <string name="biometric_login">Biometric login</string>
    <string name="use_account_password">Use account password</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="change_username">Change username</string>
    <string name="prompt_username">Username</string>
    <string name="ok" translatable="false">OK</string>
    <string name="title_adress">Address</string>
    <string name="title_adress_extras"><![CDATA[Address & Extras]]></string>
    <string name="title_image">Images</string>
    <string name="publish">Publish</string>
    <string name="tittle_and_description"><![CDATA[Tittle & Description]]></string>
    <string name="square_meters_is_required">Square meters are required</string>
    <string name="floors_is_required">Floors are required</string>
    <string name="price_is_required">Price is required</string>
    <string name="images_helper">Add images to show your property, a minimium of 3 imags is required to publish your property</string>
    <string name="tittle_helper">Fill the following fields to add more information about your property, they will be shown in the home of other users</string>
    <string name="adress_helper">Fill the following fields to add more information about your property, address will be autocompleted with google maps</string>
    <string name="promote">Promote</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="tittle_must_be_at_most_10_characters">Tittle can only have 10 characters</string>
    <string name="done">Done</string>
</resources>
