<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />


    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_info"
        android:title="@string/about" />

    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share" />

    <group android:id="@+id/payments">

        <item
            android:id="@+id/nav_promote"
            android:icon="@drawable/ic_trending_up"
            android:title="@string/promote" />

        <item android:id="@+id/nav_plans"
            android:icon="@drawable/ic_payment"
            android:title="@string/subscriptions" />

    </group>



</menu>
