<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:layout_margin="@dimen/common_margin"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:layout_margin="@dimen/common_margin"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCloseAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close_account"
        android:layout_margin="@dimen/common_margin"/>

</LinearLayout>