<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/filter_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_light_background"
    android:clickable="true"
    android:focusable="true">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_margin"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/go_back"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvFilters"
        app:layout_constraintBottom_toBottomOf="@id/tvFilters"/>


    <TextView
        android:id="@+id/tvFilters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_margin"
        android:text="@string/filters"
        android:textSize="@dimen/text_tittle"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/btnBack"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/common_margin"
        android:layout_marginTop="@dimen/common_margin"
        android:text="@string/prompt_price"
        android:textSize="@dimen/text_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFilters" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/rSPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin"
        android:layout_marginEnd="@dimen/common_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPrice" />

    <TextView
        android:id="@+id/tvSquareMeters"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin"
        android:layout_marginTop="@dimen/common_margin"
        android:text="@string/prompt_square_meters"
        android:textSize="@dimen/text_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rSPrice" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/rSSqureMeters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin"
        android:layout_marginEnd="@dimen/common_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSquareMeters" />

    <TextView
        android:id="@+id/tvRooms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin"
        android:layout_marginTop="@dimen/common_margin"
        android:text="@string/prompt_rooms"
        android:textStyle="bold"
        android:textSize="@dimen/text_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rSSqureMeters" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRooms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_margin"
        app:layout_constraintBottom_toBottomOf="@id/tilBaths"
        app:layout_constraintEnd_toStartOf="@id/tilBaths"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRooms">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieRooms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_from"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilBaths"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_margin"
        app:layout_constraintBottom_toBottomOf="@id/tilRooms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tilRooms"
        app:layout_constraintTop_toBottomOf="@id/tvRooms">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieBaths"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_to"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>



</androidx.constraintlayout.widget.ConstraintLayout>